--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 html {
   scroll-behavior: smooth;
 }
+
+img {
+  max-height: 300px;
+} 
+
+#root{
+  background-image: url("https://img.freepik.com/free-photo/abstract-luxury-blur-dark-grey-black-gradient-used-as-background-studio-wall-display-your-products-plain-studio-background_1258-54444.jpg?size=626&ext=jpg");
+  background-repeat: no-repeat;
+  background-size: 30000px 10000px;
+  min-height: 100vh;
+}
