added snack photo to locations and reviews, added add a new snack to all snacks page, did the same with new reviews and locations on their pages and removed from nav bar

--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,9 @@ img {
 } 
 
 /* review form style  */
-form .form-button, .form-button{
+/* form .form-button, .form-button{
   margin-top: .25em;
-}
+} */
 
 
 
